in contact page

--- a/book.html
+++ b/book.html
@@ -28,7 +28,7 @@
             <a href="#services">services</a>
             <a href="./../gallery/gallery.html">Gallary</a>
             <a href="./../review/review.html">review</a>
-            <a href="#contact">contact</a>
+            <a href="./contact.html">contact</a>
           </nav>
         <div class="icons">
             <i class="fa-solid fa-user" id="login-btn"></i>
