--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </p>
           </div>
           <div class="button">
-            <a href="./packages.html" class="btn">Know More</a>
+            <a href="https://en.wikipedia.org/wiki/Mount_Everest" target="_blank" class="btn">Know More</a>
           </div>
         </div>
 
@@ -146,10 +146,10 @@
             </div>
             <div class="button">
               <div>
-              <a href="./packages.html" class="btn">Know More</a></div>
+              <a href="https://en.wikipedia.org/wiki/Sweden" target="_blank" class="btn">Know More</a></div>
             </div>
           </div>
-
+          
           <div class="box">
             <img src="./media_content/pop3.jpg" alt="pop1" />
             <div class="content">
@@ -159,7 +159,7 @@
               </p>
             </div>
             <div class="button">
-              <a href="./packages.html" class="btn">Know More</a>
+              <a href="https://en.wikipedia.org/wiki/Kerala" target="_blank" class="btn">Know More</a>
             </div>
           </div>
 
