--- a/packages.html
+++ b/packages.html
@@ -23,7 +23,7 @@
         <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
         <a href="./book.html">book</a>
         <a href="./packages.html" style="color: orange;">packages</a>
-        <a href="#services">services</a>
+        <a href="./../index.html#service">services</a>
         <a href="./../gallery/gallery.html">Gallary</a>
         <a href="./../review/review.html">review</a>
         <a href="#contact">contact</a>
@@ -409,6 +409,10 @@
     slidesPerView: 1,
     spaceBetween: 30,
     loop: true,
+    autoplay: 
+    {
+      delay: 2000,
+    } , 
     pagination: {
       el: ".swiper-pagination",
       clickable: true,
