--- a/review/review.html
+++ b/review/review.html
@@ -32,7 +32,7 @@
         <a href="./../index.html#service">services</a>
         <a href="./../gallery/gallery.html">Gallary</a>
         <a href="./../review/review.html">review</a>
-        <a href="#contact">contact</a>
+        <a href="./../contact.html">contact</a>
       </nav>
     </header>
     <section id="testimonials">
