--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="right-content">
               <p class="option1-content">
-                Welcome to Wanderlust Adventures! <br />Experience the world with
+                Welcome to Travelo! <br />Experience the world with
                 Wanderlust Adventures, your premier tour and travel company
                 dedicated to creating unforgettable journeys. Whether you're a
                 seasoned traveler or embarking on your first adventure, we have the
@@ -274,7 +274,7 @@
                 your comfort and safety throughout your journey.
               </p>
               <p class="option6-content">
-                As avid travelers, we recognize the importance of preserving the
+                As travelo , we recognize the importance of preserving the
                 destinations we visit. We are committed to promoting sustainable
                 tourism practices and minimizing our ecological footprint. Through
                 responsible travel initiatives, we aim to protect the environment,
@@ -325,9 +325,9 @@
                 <p>"Experience inclusivity and thoughtful assistance throughout your trip, with our specialized services catering to the unique requirements of elderly and disabled travelers."</p>
             </div>
         </div>
-        <div class="button" id="buttonExploreMore">
+        <!-- <div class="button" id="buttonExploreMore">
             <input type="button" class="btn" value="Know More">
-              </div>
+              </div> -->
     </section>
 
     <!-- services section ends here  -->
@@ -692,18 +692,17 @@
 
             <div class="box">
               <h3>Our Location</h3>
-              <a href="#">India</a>
-              <a href="#">nepal</a>
+              <a href="./undercons.html">India</a>
+              <a href="./undercons.html">nepal</a>
             </div>
 
             <div class="box">
               <h3>quick links</h3>
               <a href="#">home</a>
-              <a href="#">book</a>
-              <a href="#">packages</a>
+              <a href="./book.html">book</a>
+              <a href="./packages.html">packages</a>
               <a href="./../gallery/gallery.html">gallary</a>
-              <a href="#">services</a>
-              <a href="#">contacts</a>
+              <a href="./contact.html">contacts</a>
             </div>
 
             <div class="box">
