--- a/packages.html
+++ b/packages.html
@@ -263,104 +263,85 @@
    
     <!-- packages section starts here -->
     <section class="packages" id="packges" style="margin-top: 50px;">
-      <h1>Popular Destinations</h1>
+      <h1>OutSide India</h1>
 
       <div class="box-container">
         <div class="box">
-          <img src="./media_content/pop1.jpg" alt="pop1" />
+          <img src="./media_content/nepal.jpg" alt="Nepal" />
           <div class="content">
-            <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
+            <h3><i class="fa-solid fa-location-dot"></i>Nepal</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-              dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-              perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-              ipsa quisquam quasi officia.
+              Nepal, officially the Federal Democratic Republic of Nepal (Nepali: सङ्घीय लोकतान्त्रिक गणतन्त्र नेपाल), is a landlocked country in South Asia. It is mainly situated in the Himalayas, but also includes parts of the Indo-Gangetic Plain. It borders the Tibet Autonomous Region of China to the north, and India in the south, east, and west, while it is narrowly separated from Bangladesh by the Siliguri Corridor.
             </p>
           </div>
           <div class="button">
-            <a href="#" class="btn">Know More</a>
+            <a href="https://en.wikipedia.org/wiki/Nepal" class="btn" target="_blank">Know More</a>
           </div>
         </div>
 
         <div class="box">
-            <img src="./media_content/pop2.jpg" alt="pop1" />
+            <img src="./media_content/bhutan.jpg" alt="Bhutan" />
             <div class="content">
-              <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
+              <h3><i class="fa-solid fa-location-dot"></i>Bhutan</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-                perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-                ipsa quisquam quasi officia.
-              </p>
+                Bhutan, officially the Kingdom of Bhutan (Dzongkha: འབྲུག་རྒྱལ་ཁབ་, romanized: Druk Gyal Khap), is a landlocked Southern Asian country, which is situated in the Eastern Himalayas, between China in the north and India in the south. A mountainous country, Bhutan is known locally as "Druk Yul" or "Land of the Thunder Dragon", a name reflecting the cultural heritage of the country. 
             </div>
             <div class="button">
-              <a href="#" class="btn">Know More</a>
+              <a href="https://en.wikipedia.org/wiki/Bhutan" target="_blank" class="btn">Know More</a>
             </div>
           </div>
 
           <div class="box">
-            <img src="./media_content/pop3.jpg" alt="pop1" />
+            <img src="./media_content/srilanka.jpg" alt="srilanka" />
             <div class="content">
-              <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
+              <h3><i class="fa-solid fa-location-dot"></i>SriLanka</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-                perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-                ipsa quisquam quasi officia.
+                Sri Lanka; Sinhala: ශ්‍රී ලංකා, romanized: Śrī Laṅkā ; Tamil: இலங்கை, romanized: Ilaṅkai (IPA: [ilaŋɡaj]), formerly known as Ceylon and officially the Democratic Socialist Republic of Sri Lanka, is an island country in South Asia. It lies in the Indian Ocean, southwest of the Bay of Bengal, separated from the Indian peninsula by the Gulf of Mannar and the Palk Strait. 
               </p>
             </div>
             <div class="button">
-              <a href="#" class="btn">Know More</a>
-            </div>
-          </div>
-
-          <!-- <div class="box">
-            <img src="/media_content/pop1.jpg" alt="pop1" />
-            <div class="content">
-              <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-                perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-                ipsa quisquam quasi officia.
-              </p>
-            </div>
-            <div class="button">
-              <a href="#" class="btn">Know More</a>
+              <a href="https://en.wikipedia.org/wiki/Sri_Lanka" target="_blank" class="btn">Know More</a>
             </div>
           </div>
 
           <div class="box">
-            <img src="/media_content/pop2.jpg" alt="pop1" />
+            <img src="./media_content/thailand.jpg" alt="thailand" />
             <div class="content">
-              <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
+              <h3><i class="fa-solid fa-location-dot"></i>Thailand</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-                perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-                ipsa quisquam quasi officia.
+                Thailand, officially the Kingdom of Thailand and historically known as Siam (/saɪˈæm, ˈsaɪæm/),[c] is a country in Southeast Asia on the Indochinese Peninsula. With a population of almost 70 million, it spans 513,120 square kilometres (198,120 sq mi). Thailand is bordered to the north by Myanmar and Laos, to the east by Laos and Cambodia, to the south by the Gulf of Thailand and Malaysia, and to the west by the Andaman Sea. 
               </p>
             </div>
             <div class="button">
-              <a href="#" class="btn">Know More</a>
+              <a href="https://en.wikipedia.org/wiki/Thailand" target="_blank" class="btn">Know More</a>
             </div>
           </div>
 
           <div class="box">
-            <img src="/media_content/pop3.jpg" alt="pop1" />
+            <img src="./media_content/dubai.jpg" alt="dubai" />
             <div class="content">
-              <h3><i class="fa-solid fa-location-dot"></i>Mt.Everest</h3>
+              <h3><i class="fa-solid fa-location-dot"></i>Dubai</h3>
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta
-                dolorem sapiente recusandae exercitationem! Corporis rerum, quidem
-                perspiciatis a quam omnis placeat nostrum esse unde sed itaque
-                ipsa quisquam quasi officia.
+                Dubai , Gulf Arabic pronunciation: [dəˈbaj] is the most populous city in the United Arab Emirates (UAE) and the capital of the Emirate of Dubai, the most populated of the 7 emirates of the United Arab Emirates.Established in the 18th century as a small fishing village, the city grew rapidly in the early 21st century with a focus on tourism and luxury, having the second most five-star hotels in the world.
               </p>
             </div>
             <div class="button">
-              <a href="#" class="btn">Know More</a>
+              <a href="https://en.wikipedia.org/wiki/Dubai" target="_blank" class="btn">Know More</a>
             </div>
-          </div> -->
+          </div>
+
+          <div class="box">
+            <img src="./media_content/indonesia.jpg" alt="indonesia" />
+            <div class="content">
+              <h3><i class="fa-solid fa-location-dot"></i>indonesia</h3>
+              <p>
+                Indonesia, officially the Republic of Indonesia, is a country in Southeast Asia and Oceania between the Indian and Pacific oceans. It consists of over 17,000 islands, including Sumatra, Java, Sulawesi, and parts of Borneo and New Guinea. Indonesia is the world's largest archipelagic state and the 14th-largest country by area, at 1,904,569 square kilometres (735,358 square miles). With around 280 million people.
+              </p>
+            </div>
+            <div class="button">
+              <a href="https://en.wikipedia.org/wiki/Indonesia" target="_blank" class="btn">Know More</a>
+            </div>
+          </div>
       </div>
     </section>
     <!-- packages section ends here -->
