--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <i class="fa-sharp fa-solid fa-circle-xmark" id="form-close"></i>
       <form action="javascript:void(0);">
         <h3>login</h3>
-        <input type="email" class="box" id="emaill" onclick="validat()" placeholder="Your Email" required />
+        <input type="email" class="box" id="emaill" onclick="validat()" placeholder="Your Username" required />
         <input type="password" class="box" id="pass" onclick="validat()" placeholder="Your Password" required />
         <p id="noempty"></p>
         <input type="Submit" value="login now" class="btn" onclick="validate()" id="buttonLogin" />
