--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="./index.html" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
-        <a href="./index.html"  id="homeNav" style="color: orange;"><i class="fa-solid fa-house"></i></a>
+        <!-- <a href="./index.html"  id="homeNav" style="color: orange;"><i class="fa-solid fa-house"></i></a> -->
         <a href="./book.html">book</a>
         <a href="./packages.html">packages</a>
         <a href="#service">services</a>
