--- a/packages.html
+++ b/packages.html
@@ -20,7 +20,7 @@
       <a href="./index.html" class="logo"> <span>T</span>RAVELO</a>
 
       <nav class="navbar">
-        <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
+        <!-- <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a> -->
         <a href="./book.html">book</a>
         <a href="./packages.html" style="color: orange;">packages</a>
         <a href="./../index.html#service">services</a>
@@ -105,7 +105,7 @@
           <img src="./media_content/Kashi-Vishwanath-Temple.jpg" alt="pop1" />
           
           <div class="content">
-            <h3><i class="fa-solid fa-location-dot"></i>Kashi Vishwanath Temple</h3>
+            <h3><i class="fa-solid fa-location-dot"></i>Kashi Vishwanath </h3>
             <p>INR 11000 per person</p>
             <div class="stars">
                     <i class="fa-solid fa-star"></i>
@@ -167,7 +167,7 @@
           <img src="./media_content/Mysore Palace, Bengaluru.jpg" alt="pop1" />
           
           <div class="content">
-            <h3><i class="fa-solid fa-location-dot"></i>Myrore Palace, Bengaluru</h3>
+            <h3><i class="fa-solid fa-location-dot"></i>Mysore Palace</h3>
             <p>INR 5000 per person</p>
             <div class="stars">
                     <i class="fa-solid fa-star"></i>
