--- a/book.html
+++ b/book.html
@@ -22,7 +22,7 @@
         <a href="./index.html" class="logo"> <span>T</span>RAVELO</a>
         
         <nav class="navbar">
-            <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a>
+            <!-- <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a> -->
             <a href="./book.html" style="color: orange;">book</a>
             <a href="./packages.html">packages</a>
             <a href="#services">services</a>
