--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <a href="./book.html">book</a>
         <a href="./packages.html">packages</a>
         <a href="#service">services</a>
-        <a href="./../gallery/gallery.html">Gallary</a>
-        <a href="./../review/review.html">review</a>
+        <a href="./gallery/gallery.html">Gallary</a>
+        <a href="./review/review.html">review</a>
         <a href="./contact.html">contact</a>
       </nav>
       <div class="icons">
