--- a/book.html
+++ b/book.html
@@ -27,9 +27,9 @@
             <!-- <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a> -->
             <a href="./book.html" style="color: orange;">book</a>
             <a href="./packages.html">packages</a>
-            <a href="#services">services</a>
-            <a href="./../gallery/gallery.html">Gallary</a>
-            <a href="./../review/review.html">review</a>
+            <a href="./index.html#service">services</a>
+            <a href="./gallery/gallery.html">Gallary</a>
+            <a href="./review/review.html">review</a>
             <a href="./contact.html">contact</a>
           </nav>
         <div class="icons">
