--- a/packages.html
+++ b/packages.html
@@ -23,10 +23,10 @@
         <!-- <a href="./index.html"  id="homeNav"><i class="fa-solid fa-house"></i></a> -->
         <a href="./book.html">book</a>
         <a href="./packages.html" style="color: orange;">packages</a>
-        <a href="./../index.html#service">services</a>
-        <a href="./../gallery/gallery.html">Gallary</a>
-        <a href="./../review/review.html">review</a>
-        <a href="#contact">contact</a>
+        <a href="./index.html#service">services</a>
+        <a href="./gallery/gallery.html">Gallary</a>
+        <a href="./review/review.html">review</a>
+        <a href="./contact.html">contact</a>
       </nav>
       <div class="icons">
         <i class="fa-solid fa-user" id="login-btn"></i>
